# bokstavsresan

./: .gitignore  README.md  pyproject.toml  se.danielnylander.bokstavsresan.desktop
.tx/: config
po/: bokstavsresan.pot  sv.po
src/bokstavsresan/: main.py
